...
  <string name="appbar_toolbar">Toolbar</string>
  <string name="appbar_material_toolbar">MaterialToolbar</string>
  <string name="appbar_appcompat_custom">appcompat-custom</string>

  <!-- ComposeFragment -->
  <string name="compose_label">Jetpack Compose</string>
  <string name="compose_component">Component</string>
  <string name="compose_pager">Pager</string>
  <string name="compose_animation">Animation</string>
  <string name="compose_date_picker">DatePicker</string>
  <string name="compose_digital_agency">DigitalAgencyScreen</string>

</resources>
...
